# strategic-ai-iran-analysis

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  STRATEGIC_ANALYSIS_REPORT.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  research.md  run_d3_app.py  run_mcmc_server.py  simple_example.py  start.sh  test_mcmc_integration.py
analysis_june2025/: ANALYSIS_SUMMARY_JUNE23_2025.md  iran_crisis_policy_report_june23_2025.txt
backend/: __init__.py
backend/api/: mcmc_endpoints.py  server.py
backend/models/: __init__.py  bayesian_engine.py  mcmc_model.py  players.py  repeated_game.py  robust_gametheory.py
backend/utils/: __init__.py  calculations.py  export_graphics.py  model_validation.py  monte_carlo.py
frontend/: app.py
frontend/components/: __init__.py  visualizations.py
frontend/static/css/: style.css
frontend/static/js/: creative-visualizations.js  explainable_ai.js  gametheory.js  main.js  mcmc_integration.js  visualizations.js
frontend/templates/: index.html
graphics/: export_summary.txt
reports/: ADVANCED_STRATEGIC_ANALYSIS_JUNE23_2025.md  EXECUTIVE_DECISION_REPORT_JUNE23_2025.md  STRATEGIC_ANALYSIS_JUNE23_2025.md  advanced_strategic_analysis_june23_2025.json  complete_analysis_june23_2025.json
scripts/: create_dark_mode_publication_analysis.py  generate_final_report.py  generate_publication_ready_analysis.py
