[project]
name = "game-theory-iran"
version = "0.1.0"
description = "Interactive game theory model for Iran-Israel-US conflict analysis"
authors = [{name = "Game Theory Analyst", email = "analyst@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pymc>=5.9.0",
    "arviz>=0.16.0",
    "pytensor>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']